# rtva

./: .gitignore  MICROPHONE_USAGE.md  PROJECT_STATUS.md  PTT_CONTROLS.md  README.md  REAL_MICROPHONE_TESTING.md  microphone_client.py  pytest.ini  requirements.txt  test_e2e_pipeline.py  test_e2e_with_audio.py  test_full_pipeline.py  test_live_microphone.py  test_mic_client.py  test_microphone_simulation.py  test_stt_client.py  test_tts_audio.py  test_tts_only.py  test_tts_save_audio.py  test_tts_streaming.py  test_tts_with_aplay.py  test_voice.py
.specify/memory/: constitution.md
docker/: audio-bridge.Dockerfile  docker-compose.yml  llm.Dockerfile  orchestrator.Dockerfile  stt.Dockerfile  tts.Dockerfile
scripts/: download_models.py  test2.py  test3.py  test4.py  test5.py  test_final.py  test_pipeline.py  test_tts.py
specs/001-local-voice-assistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-local-voice-assistant/checklists/: requirements.md
specs/001-local-voice-assistant/contracts/: llm-service.md  orchestrator.md  stt-service.md  (+1 more)
specs/002-update-stt-llm-models/: plan.md  research.md  spec.md  tasks.md
src/audio-bridge/: CMakeLists.txt
src/audio-bridge/include/: audio_bridge.h
src/audio-bridge/src/: audio_bridge.cpp
src/llm_service/: __init__.py  client.py  service.py
src/orchestrator/: __init__.py  chunker.py  pipeline.py
src/shared/: __init__.py  audio.py  base_service.py  protocol.py
src/stt_service/: __init__.py  client.py  service.py  vad.py
src/tts_service/: __init__.py  client.py  service.py
(+1 files in other folders)
